# synthetic-text-watermarking

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-compose.yaml  encipher-ai-c2pa-demo.py  encipher-ai-c2pa.py  encipher-ai.py  generate_and_visualise.py  output_distribution_visualiser.py  pyproject.toml  requirements.txt
scripts/: vllm_apple_silicon.sh
src/synthetic_text_watermarking/c2pa/: c2pa_text.py  demo.py  encypherai.py  generate_key_pair.py
src/synthetic_text_watermarking/synthid/: synthid_detector_training.py  watermark.py
src/synthetic_text_watermarking/utils/: llm_client.py
src/synthetic_text_watermarking/web/: Home.py  homepage.py
src/synthetic_text_watermarking/web/.streamlit/: config.toml
src/synthetic_text_watermarking/web/pages/: EncypherAI.py  LLM.py  c2pa.py  synthid.py
synthetic_text_watermarking/: main.py
synthetic_text_watermarking/c2pa/: c2pa_text.py  demo.py  generate_key_pair.py
synthetic_text_watermarking/c2pa_text/: demo.py  encipher-ai.py  encipher_ai.py
synthetic_text_watermarking/c2pa_text/web/: app.py
synthetic_text_watermarking/c2pa_text/web/templates/: base.html.j2  index.html.j2  sign.html.j2  verify.html.j2
synthetic_text_watermarking/synthid_text/: synthid_detector_training.py  text_watermarker.py
synthetic_text_watermarking/utils/: secrets.sh
synthetic_text_watermarking/web/: app.py
synthetic_text_watermarking/web/static/css/: fonts.css
synthetic_text_watermarking/web/templates/: base.html.j2  c2pa_sign.html.j2  c2pa_verify.html.j2  index.html.j2  synthid_verify.html.j2  synthid_watermark.html.j2
utils/: format_model_outputs.py  output_distribution_visualiser.py
watermarking/: synthid_detector_eval.py  synthid_detector_training.py  synthid_training_utils.py  text_watermarker.py  train_synthid_detector.py
(+2 files in other folders)
