[tool.poetry]
name = "synthetic-text-watermarking"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    "Tom Potter <tom.potter@bbc.co.uk>",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
matplotlib = "^3.10.6"
tqdm = "^4.67.1"
openai = "^2.1.0"
scikit-learn = "^1.7.2"
tensorflow = "^2.20.0"
accelerate = "^1.10.1"
datasets = "^4.1.1"
cryptography = "^46.0.3"
encypher-ai = "^2.8.1"
flask = "^3.1.2"
requests = "^2.32.5"
torch = "^2.10.0"
transformers = "^5.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
c2pa_text_demo = "synthetic_text_watermarking.c2pa_text.demo:main"
c2pa_text_web = "synthetic_text_watermarking.c2pa_text.web.app:main"
